# emp-tool

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FindcryptoTools.cmake  Findemp-ot.cmake  Findemp-tool.cmake  Findgmp.cmake  Findrelic.cmake  LICENSE  LICENSE-APACHE  README.md  TODO  cfile  circle.yml  emp-tool  emp-tool-config.cmake  emp-tool.h  emp-tool.vcxproj  emp.sln  log  relic-config.cmake  run  run.sh
.github/workflows/: arm.yml  arm64.yml  build.yml  cmake.yml  codeql.yml  redhat.yml  test.yml  webhook_target.yml  x86.yml
circuits/: batcher.h  bit.h  bit.hpp  circuit_file.h  comparable.h  float.h  float.hpp  float_circuit.h  float_circuit.hpp  integer.h  integer.hpp  number.h  swappable.h
cmake/: FindGMP.cmake  check_rdseed.cmake  common.cmake  emp-base.cmake  emp-tool-config.cmake  emp-tool-config.cmake.in  enable_crypto_circuit.cmake  enable_float.cmake  enable_rdseed.cmake  enable_threading.cmake  source_of_randomness.cmake  threading.cmake
compiler_test/: rdseed_instruction_test.c
docs/: EMP_TRANSLATION.md  backend.md  circuits.md  io_channel.md  netio-flush-deadlock-investigation.md  numeric_semantics.md  static_init.md  test_conventions.md  test_mode.md
emp-tool/: emp-tool.cpp  emp-tool.h
emp-tool/circuits/: aes_128_ctr.h  aes_128_ctr.hpp  aes_circuit.h  batcher.h  bit.h  bit.hpp  bitvec.h  bitvec.hpp  circuit.cpp  circuit.h  circuit_file.h  comparable.h  float32.h  float32.hpp  float32_add.cpp  float32_circuit.h  float32_circuit.hpp  float32_cos.cpp  float32_cos.hpp  float32_div.cpp  float32_div.hpp  float32_eq.cpp  float32_eq.hpp  float32_exp.cpp  float32_exp.hpp  float32_exp2.cpp  float32_exp2.hpp  float32_le.cpp  float32_leq.cpp  float32_leq.hpp  float32_ln.cpp  float32_log2.cpp  float32_mul.cpp  float32_mul.hpp  float32_sin.cpp  float32_sin.hpp  float32_sq.cpp  float32_sqrt.cpp  float32_sub.cpp  float32_sub.hpp  (+14 more)
emp-tool/circuits/files/: test
emp-tool/circuits/files/bristol_fashion/: aes_128.cpp
emp-tool/circuits/float_circuits/: float32_add.hpp  float32_cos.hpp  float32_div.hpp  float32_eq.hpp  float32_exp.hpp  float32_exp2.hpp  float32_le.hpp  float32_leq.hpp  float32_ln.hpp  float32_log2.hpp  float32_mul.hpp  float32_sin.hpp  float32_sq.hpp  float32_sqrt.hpp  float32_sub.hpp
emp-tool/core/: block.h  block.hpp  block_vector.h  constants.h  simd_tier.h  test_mode.h  utils.h  utils.hpp
emp-tool/crypto/: aes.h  aes.hpp  ccrh.h  crh.h  ec.cpp  ec.h  f2k.h  f2k.hpp  hash.h  mitccrh.h  prg.h  prp.h  tccrh.h
emp-tool/definitions/: definitions.h  definitions.h.in  definitions.h.in~
emp-tool/ec_group/: group.h  group_openssl.h  group_relic.h
emp-tool/execution/: backend.h  circuit_execution.h  clear_backend.h  clear_printer.h  clear_printer_backend.h  half_gate.h  plain_circ.h  plain_prot.h  privacy_free.h  protocol_execution.h
emp-tool/garble/: aes.h  aes_opt.h  block.h  garble.h  garble_gate_halfgates.h  garble_gate_privacy_free.h  garble_gate_standard.h
emp-tool/gc/: backend.cpp  backend.h  circuit_generator.h  halfgate_eva.h  halfgate_gen.h  privacy_free_eva.h  privacy_free_gen.h
emp-tool/group/: group.h  group_openssl.h
emp-tool/io/: abandon_io_channel.h  check_io_channel.h  file_io_channel.h  hash_io_channel.h  highspeed_net_io_channel.h  io_channel.h  mem_io_channel.h  net_io_buffered_channel.h  net_io_channel.h  tcp_socket.h  tls_io_channel.h  trace_io.h
emp-tool/plain/: plain_env.h  plain_gc.h
emp-tool/utils/: ThreadPool.h  aes.h  aes_opt.h  block.h  ccrh.h  com.h  config.h  constants.cpp  constants.h  coot_table.h  crh.h  f2k.h  group.h  group_openssl.h  hash.h  mitccrh.h  prg.h  prp.h  sse2neon.h  tccrh.h  utils.h  utils.hpp  utils_ec.h  utils_ec.hpp  xor_tree.h
emp-tool/utils/fields/: efp2r128.h  fp59.h  fp61.h  utils.h
garble/: aes.h  block.h  garble.h  garble_gate_halfgates.h  garble_gate_privacy_free.h  garble_gate_standard.h
gc/: backend.cpp  backend.h  circuit_file_generator.h  circuit_generator.h  garble_circuit.h  halfgate_eva.h  halfgate_gen.h  privacy_free_eva.h  privacy_free_gen.h
io/: abandon_io_channel.h  check_io_channel.h  file_io_channel.h  hash_io_channel.h  io_channel.h  mem_io_channel.h  net_io_channel.cpp  net_io_channel.h
plain/: plain_env.h  plain_gc.h
test/: CMakeLists.txt  aes_128_ctr.cpp  aes_opt.cpp  bit.cpp  bitvec.cpp  com.cpp  crh.cpp  ecc.cpp  emp-tool-test-bits.vcxproj  emp-tool-test-gen_circuit.vcxproj  f2k.cpp  fields.cpp  float.cpp  float32.cpp  garble.cpp  gen_circuit.cpp  halfgate.cpp  hash.cpp  int.cpp  mitccrh.cpp  netio.cpp  netio2.cpp  ot.cpp  prg.cpp  prp.cpp  sha3_256.cpp  sha3_circuit.cpp  tccrh.cpp  test_aes.cpp  test_aes_128_ctr.cpp  test_aes_circuit.cpp  test_block.cpp  test_ccrh.cpp  test_circuit_file.cpp  test_ecc.cpp  test_f2k.cpp  test_float.cpp  test_garble.cpp  test_gen_circuit.cpp  test_halfgate.cpp  (+12 more)
test/shared/: emp-tool-test.h
test/shared/execution/: plain_prot.h
utils/: block.h  com.h  config.h  fmemopen.c  fmemopen.h  hash.h  prg.cpp  prg.h  prp.h  utils.h  utils.hpp  utils_ec.h  utils_ec.hpp  xor_tree.h
